# deeplev

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  setup.py  train.py
.github/workflows/: codestyle.yml  core.yml
deeplev/: __init__.py  dataset.py  knn.py  model.py  predictor.py  reader.py  sampler.py  typo_generator.py  utils.py
deeplev/allennlp_modules/: __init__.py  onehot_cnn.py  onehot_embedder.py  onehot_encoder.py
deeplev/embedder/: __init__.py  abstract.py  loader.py  zero.py
deeplev/metrics/: __init__.py  recall_at_k.py
deeplev/modules/: knn.py  typo_generator.py
deeplev/predictor/: __init__.py  abstract.py  threshold.py
deeplev/predictors/: __init__.py  distance_predictor.py  embedder_predictor.py  predictor.py  search_predictor.py
deeplev/tests/: predictor_test.py
model_config/: attention_bilstm.jsonnet  bilstm.jsonnet  embedding_cnn.jsonnet  multi_head_self_attention.jsonnet  onehot_cnn.jsonnet
scripts/: create_dataset.py  create_levenshtein_dataset.py  dataset_from_csv.py  model.py  train.py  typo_generator.py  validate_similarity_search.py  verify.py
scripts/allennlp_modules/: onehot_encoder.py
tests/: __init__.py  dataset_test.py  model_configs_test.py  model_test.py  predictor_test.py  reader_test.py
tests/fixtures/data/: train.jsonl  valid.jsonl
tests/predictors/: distance_test.py  embedder_test.py  search_test.py
training_config/: cnn.jsonnet
