[tool.poetry]
name = "deeplev"
version = "0.1.0"
description = ""
authors = ["fursovia <fursov.ia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
torch = "1.4.0"
allennlp = "0.9.0"
pandas = "^1.0"
python-Levenshtein = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "5.3.1"
black = "^19.10b0"
mypy = "0.770"
flake8 = "^3.7.9"

[tool.black]
line-length = 100

include = '\.pyi?$'

exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
)
'''

[build-system]
requires = ["poetry==0.12.17"]
build-backend = "poetry.masonry.api"
